ahaha to text demo

--- a/collector/templates/collector/base.html
+++ b/collector/templates/collector/base.html
@@ -13,7 +13,7 @@
                 <a href="{% url 'submission_form' %}" class="top-menu">
                     {% include './icons/file-earmark-plus.svg' %}
                 </a>
-                <h1><a href="/">Ahahaha</a></h1>
+                <h1><a href="/">Text submission demo</a></h1>
             </div>
         </header>
         <main class="container">
