--- a/collector/templates/collector/base.html
+++ b/collector/templates/collector/base.html
@@ -13,6 +13,9 @@
                 <a href="{% url 'submission_form' %}" class="top-menu">
                     {% include './icons/file-earmark-plus.svg' %}
                 </a>
+                <a href="{% url 'submission_list' %}" class="top-menu">
+                    {% include './icons/list-ul.svg' %}
+                </a>
                 <h1><a href="/">Text submission demo</a></h1>
             </div>
         </header>
