--- a/collector/templates/collector/submission_form.html
+++ b/collector/templates/collector/submission_form.html
@@ -2,9 +2,14 @@
 
 {% block content %}
 <h2>Submission</h2>
-<form method="POST" class="post-form">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit" class="save btn btn-default">Save</button>
-</form>
+<div class="container form">
+    <div class="col">
+        <form method="POST" class="post-form">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <button type="submit" class="save btn btn-primary">Save</button>
+        </form>
+    </div>
+</div>
+
 {% endblock %}
