--- a/collector/templates/collector/submission_form.html
+++ b/collector/templates/collector/submission_form.html
@@ -3,10 +3,12 @@
 {% block content %}
 <h2>Submission</h2>
 <div class="container form">
-    <div class="col">
+    <div class="col" align="center">
         <form method="POST" class="post-form">
             {% csrf_token %}
-            {{ form.as_p }}
+            <table>
+                {{ form.as_table }}
+            </table>
             <button type="submit" class="save btn btn-primary">Save</button>
         </form>
     </div>
