--- a/collector/templates/collector/submission_form.html
+++ b/collector/templates/collector/submission_form.html
@@ -9,7 +9,7 @@
             <table>
                 {{ form.as_table }}
             </table>
-            <button type="submit" class="save btn btn-primary">Save</button>
+            <button type="submit" class="save btn btn-primary">Send</button>
         </form>
     </div>
 </div>
